# Colony-plus-plus

./: .gitignore  AUTHORS.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  building.cpp  building.h  colony.cpp  colony.h  doxygen_log.txt  energy.cpp  energy.h  enums.h  farm.cpp  farm.h  game.cpp  game.h  gamedata.txt  housing.cpp  housing.h  imgui.ini  logistics.cpp  logistics.h  main.cpp  makefile  producer.cpp  producer.h  save.txt  save1.txt  save1_buildings.txt  save1_colony.txt  save_buildings.txt  save_colony.txt  stary_kod_do_zapisania.txt  terr.cpp  test_buildings.txt  test_colony.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pytanie.md
Grafik_edit/: grafiki_siatki.xcf  ikonki.xcf
data/: config.txt  gamedata.txt  test_buildings.txt  test_colony.txt  zapis_buildings.txt  zapis_colony.txt
data/saves/basic/: zapis_buildings.txt  zapis_colony.txt
html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  building_8cpp.html  building_8h.html  building_8h.js  building_8h_source.html  building_factory_8h.html  building_factory_8h.js  building_factory_8h_source.html  buildings_grid_8cpp.html  buildings_grid_8cpp.js  buildings_grid_8h.html  buildings_grid_8h.js  buildings_grid_8h_source.html  class_building-members.html  class_building.html  class_building.js  class_building_factory-members.html  class_building_factory.html  class_building_factory.js  class_buildings_grid-members.html  class_buildings_grid.html  class_buildings_grid.js  class_colony-members.html  class_colony.html  class_colony.js  class_energy-members.html  class_energy.html  class_energy.js  class_farm-members.html  class_farm.html  class_farm.js  class_game-members.html  class_game.html  class_game.js  class_graphics-members.html  class_graphics.html  class_graphics.js  class_housing-members.html  (+108 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+67 more)
latex/: annotated.tex  building_8cpp.tex  building_8h.tex  building_8h_source.tex  building_factory_8h.tex  building_factory_8h_source.tex  buildings_grid_8cpp.tex  buildings_grid_8h.tex  buildings_grid_8h_source.tex  class_building.eps  class_building.tex  class_building_factory.tex  class_buildings_grid.tex  class_colony.tex  class_energy.eps  class_energy.tex  class_farm.eps  class_farm.tex  class_game.tex  class_graphics.tex  class_housing.eps  class_housing.tex  class_logistics.tex  class_producer.eps  class_producer.tex  class_terr.eps  class_terr.tex  colony_8cpp.tex  colony_8h.tex  colony_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dirs.tex  energy_8cpp.tex  energy_8h.tex  energy_8h_source.tex  farm_8cpp.tex  farm_8h.tex  farm_8h_source.tex  files.tex  game_8cpp.tex  (+28 more)
libs/imgui/: imgui-SFML.cpp
src/: building.cpp  building.h  buildingFactory.h  buildingsGrid.cpp  buildingsGrid.h  colony.cpp  colony.h  energy.cpp  energy.h  enums.h  farm.cpp  farm.h  game.cpp  game.h  graphics.cpp  graphics.h  housing.cpp  housing.h  logistics.cpp  logistics.h  main.cpp  producer.cpp  producer.h  terr.cpp  terr.h  utils.h
